<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vhod"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toBottomOf="@id/textView"/>

    <TextView
        android:id="@+id/signin"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin"
        android:layout_marginTop="30dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_background_corners"
        android:hint="@string/mail"
        android:paddingStart="12dp" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/mail"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:background="@drawable/ic_background_corners"
        android:hint="@string/password"
        android:paddingStart="12dp" />

    <com.google.android.material.button.MaterialButton
        android:backgroundTint="@color/grey"
        android:id="@+id/button"
        app:cornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_height="55dp"
        android:text="@string/go"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/forgot"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="75dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press"
        android:textColor="@color/orange"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/forgot"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>